# motorwrap

./: .gitignore  README.md  pyproject.toml
motorwrap/: __init__.py  catboost_poisson.py  cli.py  explainability.py  predict_with_model.py  schema.py  score.py
motorwrap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_fit_peril.py
