[project]
name = "motorwrap"
version = "0.0.1"
description = "Peril-level CatBoost Poisson wrapper for insurance modeling (MVP)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "You"}]

dependencies = [
  "polars>=0.20.0",
  "catboost>=1.2.5",
  "optuna>=3.6.0",
  "numpy>=1.24",
  "shap>=0.42.0",
  "typer>=0.12.0",
  "matplotlib>=3.8",
]

[project.scripts]
motorwrap = "motorwrap.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


# Add this to explicitly specify packages
[tool.setuptools.packages.find]
include = ["motorwrap*"]
exclude = ["catboost_info*"]